--- a/style.css
+++ b/style.css
@@ -15,6 +15,6 @@
 .platform {
     width: 85px;
     height: 15px;
-    background-color: chocolate;
+    background-color: forestgreen;
     position: absolute;
 }
